--- a/src/FlatMate.Web/Areas/Account/Views/MyProfile/ChangePassword.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/MyProfile/ChangePassword.cshtml
@@ -7,19 +7,22 @@
 }
 
 <section class="container">
-    <div class="flex-row actions">
-        <a asp-action="Index">Mein Profil</a>
+
+    <div class="page-header">
+        <h1 class="page-title">@ViewData["PageTitle"]</h1>
+        <div class="page-options d-flex">
+            <a asp-action="Index" class="btn">Mein Profil</a>
+        </div>
     </div>
+
 </section>
 
-<section class="container">
+<section class="container centered-form">
 
-    <div class="centered-form standard-box">
-        <form asp-area="Account" asp-controller="MyProfile" asp-action="ChangePassword" method="post">
+    <form asp-area="Account" asp-controller="MyProfile" asp-action="ChangePassword" method="post" class="card">
+        <div class="card-body">
             <fieldset>
-
                 <div class="form-group">
-
                     <label asp-for="OldPassword"></label>
                     <input asp-for="OldPassword" required/>
                 </div>
@@ -33,13 +36,14 @@
                     <label asp-for="NewPasswordConfirmation"></label>
                     <input asp-for="NewPasswordConfirmation" required/>
                 </div>
-
-                <div class="form-group align-right">
-                    <input class="btn-primary" type="submit" value="Ändern">
-                </div>
-
             </fieldset>
-        </form>
-    </div>
+        </div>
+
+        <div class="card-footer">
+            <div class="d-flex">
+                <input class="btn btn-primary ml-auto" type="submit" value="Ändern">
+            </div>
+        </div>
+    </form>
 
 </section>
