--- a/src/FlatMate.Web/Areas/Account/Views/Create/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/Create/Index.cshtml
@@ -3,53 +3,58 @@
 @{
     Layout = "_LayoutBlank";
     ViewData["Title"] = "Nutzer erstellen";
-    ViewData["PageTitle"] = "Nutzer erstellen";
+    ViewData["MainClass"] = "account-create-index";
 }
 
-<section class="container centered-form login">
+<section class="container centered-form">
 
-    <h1 style="text-align: center">Account erstellen</h1>
+    <form asp-area="Account" asp-controller="Create" method="post" class="card">
+        <div class="card-body">
 
-    <form asp-area="Account" asp-controller="Create" method="post">
+            <div class="card-title">
+                Account erstellen
+            </div>
 
-        <div class="alert-wrapper">
-            @if (Model.IsError)
-            {
-                <div class="alert alert-error">@Model.Result?.Message</div>
-            }
-            @if (Model.IsSuccess)
-            {
-                <div class="alert alert-success">@Model.Result?.Message</div>
-            }
+            <div class="alert-wrapper">
+                @if (Model.IsError)
+                {
+                    <div class="alert alert-error">@Model.Result?.Message</div>
+                }
+                @if (Model.IsSuccess)
+                {
+                    <div class="alert alert-success">@Model.Result?.Message</div>
+                }
+            </div>
+
+            <fieldset>
+
+                <div class="form-group">
+
+                    <label asp-for="UserName"></label>
+                    <input asp-for="UserName" required/>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" required/>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Password"></label>
+                    <input asp-for="Password" required/>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="PasswordConfirmation"></label>
+                    <input asp-for="PasswordConfirmation" required/>
+                </div>
+
+                <div class="form-group align-right">
+                    <input class="btn-primary" type="submit" value="Erstellen">
+                </div>
+
+            </fieldset>
         </div>
-
-        <fieldset>
-
-            <div class="form-group">
-
-                <label asp-for="UserName"></label>
-                <input asp-for="UserName" required/>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" required/>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" required/>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="PasswordConfirmation"></label>
-                <input asp-for="PasswordConfirmation" required/>
-            </div>
-
-            <div class="form-group align-right">
-                <input class="btn-primary" type="submit" value="Erstellen">
-            </div>
-
-        </fieldset>
     </form>
+
 </section>
