--- a/src/FlatMate.Web/Areas/Account/Views/Login/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Account/Views/Login/Index.cshtml
@@ -3,43 +3,49 @@
 @{
     Layout = "_LayoutBlank";
     ViewData["Title"] = "Login";
+    ViewData["MainClass"] = "account-login-index";
 }
 
-<section class="container centered-form login">
+<section class="container centered-form">
 
-    <h1 style="text-align: center">FlatMate</h1>
+    <form asp-area="Account" asp-controller="Login" method="post" class="card">
 
-    <form asp-area="Account" asp-controller="Login" method="post">
+        <div class="card-body">
 
-        <div class="alert-wrapper">
-            @if (Model.IsError)
-            {
-                <div class="alert alert-error">@Model.Result?.Message</div>
-            }
-            @if (Model.IsSuccess)
-            {
-                <div class="alert alert-success">@Model.Result?.Message</div>
-            }
+            <div class="card-title">
+                <h1 style="text-align: center">FlatMate</h1>
+            </div>
+
+            <div class="alert-wrapper">
+                @if (Model.IsError)
+                {
+                    <div class="alert alert-error">@Model.Result?.Message</div>
+                }
+                @if (Model.IsSuccess)
+                {
+                    <div class="alert alert-success">@Model.Result?.Message</div>
+                }
+            </div>
+
+            <fieldset>
+                <input asp-for="ReturnUrl" type="hidden"/>
+
+                <div class="form-group">
+                    <label asp-for="UserName"></label>
+                    <input asp-for="UserName" autofocus required/>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Password"></label>
+                    <input asp-for="Password" required/>
+                </div>
+
+                <div class="form-footer">
+                    <input class="btn-primary btn-block" type="submit" value="Login">
+                </div>
+
+            </fieldset>
         </div>
-
-        <fieldset>
-            <input asp-for="ReturnUrl" type="hidden"/>
-
-            <div class="form-group">
-                <label asp-for="UserName"></label>
-                <input asp-for="UserName" autofocus required/>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Password"></label>
-                <input asp-for="Password" required/>
-            </div>
-
-            <div class="form-group align-right">
-                <input class="btn-primary" type="submit" value="Login">
-            </div>
-
-        </fieldset>
     </form>
 
 </section>
