--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/Browse.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/Browse.cshtml
@@ -6,15 +6,20 @@
 }
 
 <section class="container">
+    <div class="page-header">
+        <h1 class="page-title">Alle Listen</h1>
+    </div>
+</section>
 
-    <div class="standard-box">
-        <table>
+<section class="container">
+    <div class="card">
 
+        <table class="table table-vcenter card-table">
             <thead>
             <tr>
                 <th width="75%">Name</th>
                 <th class="show-large">von</th>
-                <th class="icon"></th>
+                <th class="icon fit"></th>
             </tr>
             </thead>
 
