--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/Create.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/Create.cshtml
@@ -4,14 +4,23 @@
     Layout = "_Layout";
     ViewData["Title"] = "Liste erstellen";
     ViewData["PageTitle"] = "Liste erstellen";
+    ViewData["MainClass"] = "list-itemlist-create";
 }
 
 <section class="container">
 
-    <div class="centered-form standard-box">
-        <form asp-area="Lists" asp-controller="ItemList" asp-action="Create" method="post">
-            <fieldset>
+    <div class="page-header">
+        <h1 class="page-title">@ViewData["PageTitle"]</h1>
+        <div class="page-options d-flex"></div>
+    </div>
 
+</section>
+
+<section class="container centered-form">
+
+    <form asp-area="Lists" asp-controller="ItemList" asp-action="Create" method="post" class="card">
+        <div class="card-body">
+            <fieldset>
                 <div class="form-group">
                     <label asp-for="Name"></label>
                     <input asp-for="Name" required/>
@@ -26,13 +35,13 @@
                     <label asp-for="IsPublic"></label>
                     <input asp-for="IsPublic"/>
                 </div>
-
-                <div class="form-group align-right">
-                    <input class="btn-primary" type="submit" value="Erstellen">
-                </div>
-
             </fieldset>
-        </form>
-    </div>
+        </div>
+        <div class="card-footer">
+            <div class="d-flex">
+                <input class="btn btn-primary ml-auto" type="submit" value="Erstellen">
+            </div>
+        </div>
+    </form>
 
 </section>
