--- a/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
+++ b/src/FlatMate.Web/Areas/Lists/Views/ItemList/My.cshtml
@@ -7,16 +7,17 @@
 }
 
 <section class="container">
-
-    <div class="flex-row align-right actions">
-        <a asp-controller="ItemList" asp-action="Create">Liste erstellen</a>
+    <div class="page-header">
+        <h1 class="page-title">Meine Listen</h1>
+        <div class="page-options d-flex">
+            <a asp-controller="ItemList" asp-action="Create" class="btn">Liste erstellen</a>
+        </div>
     </div>
-
 </section>
 
 <section class="container">
 
-    <div class="standard-box">
+    <div class="card">
 
         @if (!Model.MyLists.Any())
         {
@@ -26,12 +27,12 @@
         }
         else
         {
-            <table>
+            <table class="table table-vcenter card-table">
                 <thead>
                 <tr>
                     <th width="75%">Name</th>
-                    <th class="show-large">öffentlich?</th>
-                    <th class="icon show-large"></th>
+                    <th class="show-large center fit">öffentlich?</th>
+                    <th class="icon show-large fit"></th>
                 </tr>
                 </thead>
 
@@ -42,7 +43,7 @@
                         <td>
                             <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
                         </td>
-                        <td class="show-large">
+                        <td class="show-large center">
                             <span class="fa-inline-host">
                                 @if (list.IsPublic)
                                 {
@@ -65,63 +66,52 @@
             </table>
         }
     </div>
-
-</section>
-
-<section class="container" style="margin-top: 5rem;">
-
-    <div class="flex-row">
-        <div class="flex-row actions vertical-center" style="width: 50%">
-            <h3>Favoriten</h3>
-        </div>
-
-        <div class="flex-row align-right actions" style="width: 50%">
-            <a asp-controller="ItemList" asp-action="Browse">Liste suchen</a>
-        </div>
-    </div>
-
 </section>
 
 <section class="container">
 
-    <div class="standard-box">
+    <div class="card">
+        <div class="card-header d-flex">
+            <h3 class="card-title">Favoriten</h3>
+            <a asp-controller="ItemList" asp-action="Browse" class="ml-auto">Liste suchen</a>
+        </div>
 
-        @if (!Model.Favorites.Any())
-        {
-            <div style="padding: .5rem 1rem; text-align: center">
-                Du hast noch keine Favoriten hinzugefügt.
-            </div>
-        }
-        else
-        {
-            <table>
-                <thead>
-                <tr>
-                    <th width="75%">Name</th>
-                    <th class="show-large">von</th>
-                    <th class="icon"></th>
-                </tr>
-                </thead>
-
-                <tbody>
-                @foreach (var list in Model.Favorites)
-                {
+        <div>
+            @if (!Model.Favorites.Any())
+            {
+                <div style="padding: .5rem 1rem; text-align: center">
+                    Du hast noch keine Favoriten hinzugefügt.
+                </div>
+            }
+            else
+            {
+                <table class="table table-vcenter card-table ">
+                    <thead>
                     <tr>
-                        <td>
-                            <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
-                        </td>
-                        <td class="show-large">@list.Owner.UserName</td>
-                        <td class="icon">
-                            <a asp-area="Lists" asp-controller="ItemList" asp-action="Unfavorite" asp-route-id="@list.Id" class="fa-host danger" aria-hidden="true" title="Als Favorit entfernen">
-                                <i class="fa fa-times danger" aria-hidden="true"></i>
-                            </a>
-                        </td>
+                        <th width="75%">Name</th>
+                        <th class="show-large">von</th>
+                        <th class="icon fit"></th>
                     </tr>
-                }
-                </tbody>
-            </table>
-        }
-
+                    </thead>
+                    <tbody>
+                    @foreach (var list in Model.Favorites)
+                    {
+                        <tr>
+                            <td>
+                                <a asp-area="Lists" asp-controller="ItemList" asp-action="View" asp-route-id="@list.Id">@list.Name</a>
+                            </td>
+                            <td class="show-large">@list.Owner.UserName</td>
+                            <td class="icon">
+                                <a asp-area="Lists" asp-controller="ItemList" asp-action="Unfavorite" asp-route-id="@list.Id" class="fa-host danger" aria-hidden="true" title="Als Favorit entfernen">
+                                    <i class="fa fa-times danger" aria-hidden="true"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    }
+                    </tbody>
+                </table>
+            }
+        </div>
     </div>
 
 </section>
