--- a/src/FlatMate.Web/Areas/Offers/Views/Company/Index.cshtml
+++ b/src/FlatMate.Web/Areas/Offers/Views/Company/Index.cshtml
@@ -9,31 +9,28 @@
 
 <section class="container">
 
-    <div class="row align-right actions">
-        <div class="col-auto">
-            <a asp-controller="ProductFavorite" asp-action="Manage">Favoriten verwalten</a>
+    <div class="page-header">
+        <h1 class="page-title">@ViewData["PageTitle"]</h1>
+        <div class="page-options d-flex">
+            <a asp-controller="ProductFavorite" asp-action="Manage" class="btn">Favoriten verwalten</a>
         </div>
     </div>
 
-    <div class="row">
+</section>
 
+<section class="container">
+
+    <div class="row">
         @foreach (var company in Model.Companies)
         {
             <div class="col-sm-6 col-market">
-                <a asp-action="View" asp-controller="Offer" asp-route-companyId="@((int)company.Id)" class="standard-box market-box">
-                    @if (!string.IsNullOrEmpty(company.ImagePath))
-                    {
-                        <div class="image">
-                            <img src="@company.ImagePath" style="width:100%" />
-                        </div>
-                    }
+                <a asp-action="View" asp-controller="Offer" asp-route-companyId="@((int) company.Id)" class="card card-company">
+                    <div class="card-body p-3">
+                        <img src="@company.ImagePath" style="width: 100%" alt="@company.Name"/>
+                    </div>
                 </a>
             </div>
-
         }
-
     </div>
-
-
 
 </section>
