--- a/src/FlatMate.Web/Views/Error/PageNotFound.cshtml
+++ b/src/FlatMate.Web/Views/Error/PageNotFound.cshtml
@@ -4,15 +4,24 @@
     ViewData["PageTitle"] = "Seite nicht gefunden";
 }
 
+<section class="container">
+
+    <div class="page-header">
+        <h1 class="page-title"></h1>
+        <div class="page-options d-flex"></div>
+    </div>
+
+</section>
 
 <section class="container">
-    
-    <div class="row">
-        <div class="col">
-            <div class="standard-box" style="padding: 1rem;">
-                vier null vier <br />
-                Die Seite konnte nicht gefunden werden :(
-            </div>
+
+    <div class="card">
+        <div class="card-status bg-red"></div>
+        <div class="card-header">
+            <h3 class="card-title">@ViewData["PageTitle"]</h3>
+        </div>
+        <div class="card-body">
+            Die aufgerufene Seite existiert nicht.
         </div>
     </div>
 
