--- a/src/FlatMate.Web/Views/Shared/_LayoutBlank.cshtml
+++ b/src/FlatMate.Web/Views/Shared/_LayoutBlank.cshtml
@@ -2,25 +2,25 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <title>FlatMate</title>
 
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
 
-    <link asp-href-include="~/dist/app.css" rel="stylesheet" asp-append-version="true" />
+    <link asp-href-include="~/dist/app.css" rel="stylesheet" asp-append-version="true"/>
 </head>
 
 <body>
 
-    <main>
-        @RenderBody()
-    </main>
+<main class="@ViewData["MainClass"]">
+    @RenderBody()
+</main>
 
-    <script asp-src-include="~/dist/vendor.js" type="text/javascript"></script>
-    <script asp-src-include="~/dist/app.js" type="text/javascript"></script>
+<script asp-src-include="~/dist/vendor.js" type="text/javascript"></script>
+<script asp-src-include="~/dist/app.js" type="text/javascript"></script>
 
 </body>
 
