--- a/src/FlatMate.Web/wwwroot/css/offers/productfavorite-manage.scss
+++ b/src/FlatMate.Web/wwwroot/css/offers/productfavorite-manage.scss
@@ -1,54 +1,18 @@
 ﻿@import '../variables.scss';
 
 .productfavorite-manage {
-    .select-company {
-        margin-bottom: .5rem;
-    }
+    .card-product {
+        height: 100%;
+        margin: 0;
 
-    .filter {
-        margin-bottom: .5rem;
+        .card-body {
+            height: 100%;
+            display: flex;
+            flex-flow: column;
+        }
     }
 
     .col-product {
-        margin-bottom: 1rem;
-    }
-
-    .product-box {
-        display: flex;
-        flex-flow: column;
-        height: 100%;
-        padding: .75rem;
-
-        .image {
-            text-align: center;
-            margin-bottom: 1rem;
-        }
-
-        .name {
-            flex: 2 0 auto;
-            font-size: .9rem;
-            margin-bottom: .5rem;
-        }
-    }
-
-    @media (min-width: 1200px) {
-        .col-product {
-            -ms-flex: 0 0 20%;
-            flex: 0 0 20%;
-            max-width: 20%;
-        }
-    }
-
-    .product-actions {
-        .col-12 {
-            margin-bottom: .5rem;
-        }
-
-        .loading {
-            background-color: $color-secondary;
-            display: block;
-            padding: .3rem .5rem;
-            text-align: center;
-        }
+        padding-bottom: 30px;
     }
 }
