--- a/src/FlatMate.Web/wwwroot/css/shared/form.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/form.scss
@@ -2,6 +2,7 @@
 
 @mixin btn-variant($color, $font-color: #fff) {
     background-color: $color;
+    border: 1px solid $color-border;
     color: $font-color;
 
     &:hover {
@@ -10,7 +11,7 @@
     }
 
     &:focus {
-        box-shadow: inset 0 1px 10px rgba(0, 0, 0, .3);
+        box-shadow: inset 0 1px 5px rgba(0, 0, 0, .12);
     }
 }
 
@@ -18,13 +19,14 @@ form {
     border: 0;
     box-sizing: border-box;
     display: block;
-    padding: 1em;
-    max-width: 500px;
+    //max-width: 500px;
     width: 100%;
 
     label {
-        display: inline-block;
-        margin-bottom: .3rem;
+        display: block;
+        margin-bottom: .375rem;
+        font-weight: 600;
+        font-size: 0.875rem;
     }
 }
 
@@ -74,13 +76,20 @@ input[type=email] {
 .btn,
 button,
 input[type=submit] {
-    cursor:pointer;
+    cursor: pointer;
     display: block;
     min-width: 100px;
-    padding: .3rem .5rem;
+    padding: .375rem .75rem;
     text-align: center;
-    transition: background-color linear 0.15s;
+    line-height: 1.25;
     width: auto;
+    border: 1px solid transparent;
+    transition: background-color linear 0.15s;
+
+    .btn-block {
+        display: block;
+        width: 100%;
+    }
 }
 
 input[type=checkbox] {
@@ -118,6 +127,10 @@ input[type=submit]:focus {
     margin-top: 1rem;
 }
 
+.form-footer {
+    margin-top: 2rem;
+}
+
 .btn-primary {
     @include btn-variant($color-primary);
 }
@@ -131,7 +144,7 @@ input[type=submit]:focus {
 }
 
 .btn-success {
-    @include btn-variant($color-success);
+    @include btn-variant($color-success, #fff);
 }
 
 .btn-info {
