--- a/src/FlatMate.Web/wwwroot/css/shared/main.scss
+++ b/src/FlatMate.Web/wwwroot/css/shared/main.scss
@@ -35,9 +35,8 @@ h4,
 h5,
 h6 {
     margin: 0;
-    margin-bottom: .5rem;
     font-weight: 300;
-    line-height: 1.1;
+    line-height: $heading-height;
 }
 
 h1 {
@@ -171,4 +170,48 @@ a {
 
 .word-break-all {
     word-break: break-all;
+}
+
+.p-3 {
+    padding: 0.75rem !important;
+}
+
+.pt-1 {
+    padding-top: 0.25rem !important;
+}
+
+.pt-2 {
+    padding-top: 0.5rem !important;
+}
+
+.pt-3 {
+    padding-top: 0.75rem !important;
+}
+
+.pt-4 {
+    padding-top: 1rem !important;
+}
+
+.pt-5 {
+    padding-top: 1.5rem !important;
+}
+
+.pb-4 {
+    padding-bottom: 1rem !important;
+}
+
+.pb-5 {
+    padding-bottom: 1.5rem !important;
+}
+
+.text-md {
+    font-size: .9rem;
+}
+
+.f-stretch {
+    flex: 1 0 auto;
+}
+
+.bg-red {
+    background-color: $color-danger;
 }
